Fix overflow not handled correctly

--- a/packages/frontend/src/components/Sidebar/Sidebar.module.css
+++ b/packages/frontend/src/components/Sidebar/Sidebar.module.css
@@ -7,6 +7,11 @@
   align-items: center;
   padding: 2em;
   color: white;
+  overflow-y: scroll;
+}
+
+.container::-webkit-scrollbar-track {
+  background: var(--flocker-color-primary);
 }
 
 .content {
